#### Don't forget to change the version number in configure.ac! ####

28 May 2004 TUNTAP_SetDestAddr: 'ifr_addr' (NOT 'ifr_dstaddr') - Fish
28 May 2004 ffs.pat - SMP fix for ffs macro - Greg Smith
24 May 2004 gcwait.pat, cckdfat.pat - cckd fixes - Greg Smith
22 May 2004 Fix crypto/Makefile.am warning about CFLAGS use - Ivan Warren
22 May 2004 Fix warning about CONTAINING_RECORD macro (linklist.h) - Fish
14 May 2004 libgcrypt API variations automagic integration - Greg & Ivan
13 May 2004 bc.pat - Yet another BC optimization - Greg Smith
13 May 2004 fetch_main_absolute.pat - Resolve absolute addresses only
            once for multiple addresses in the same page - Greg Smith
13 May 2004 sieregs.pat - Obtain guestregs on first execute of SIE - Greg Smith
13 May 2004 immed.pat - ni/xi/oi optimizations - Greg Smith
04 May 2004 cckdbuf.pat - cckd fixes - Greg Smith
17 Apr 2004 Correct merged PER guest interrupt propagation - Jan Jaeger
10 Apr 2004 Use signal shutdown on quit - Jan Jaeger
09 Apr 2004 PMCW QDIO bit no longer reserved - Jan Jaeger
08 Apr 2004 QDIO device handler changes - Jan Jaeger
08 Apr 2004 Correct false PIC 04 on TRAP2/4 instructions - Jan Jaeger
04 Apr 2004 Undo change 14 May - Bernard van der Helm
30 Mar 2004 Add debug entry point for watchdog signal - Jan Jaeger
26 Mar 2004 Program old PSW fix (ESAME) - Jan Jaeger
25 Mar 2004 Program old PSW fix (S/390) - Jan Jaeger
24 Mar 2004 More of Greg's CLC improvements + no direct SK manipulation
            when dealing with non-crossing MVCs - Ivan Warren
22 Mar 2004 Fix DXC codes in ieee.c - Jan Jaeger
21 Mar 2004 Fix false PIC 04's under SIE - Jan Jaeger
18 Mar 2004 re-enable ECPS:VM + VTIMER fix - Ivan Warren
17 Mar 2004 clc.pat - Optimize CLC - Ivan & Greg - Greg Smith
17 Mar 2004 l2m.pat - Tweaks to logical_to_main - Greg Smith
17 Mar 2004 protected.pat - Optimization for is_fetch_protected - Greg Smith
17 Mar 2004 prefixing.pat - Optimize APPLY_PREFIXING using xor - Greg Smith